--- a/app/views/current_weather/index.html.erb
+++ b/app/views/current_weather/index.html.erb
@@ -10,9 +10,16 @@
   <%= submit_tag("Get Temperature") %>
 <% end %>
 
+<% flash.each do |type, message| %>
+  <div class="alert alert-<%= type %>">
+    <%= message %>
+  </div>
+<% end %>
+
 <% if @temperature %>
   <h2> Temperature </h2>
   <p>Current Temperature: <%= @temperature[:current] %></p>
   <p>Min Temperature: <%= @temperature[:min] %></p>
   <p>Max Temperature: <%= @temperature[:max] %></p>
 <% end %>
+
