--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <%= javascript_pack_tag 'application' %>
-   
+    <%= javascript_include_tag 'weather' %>
   </head>
 
   <body>
